--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Ignore large video files
+public/videos/*.mp4
+
 # dependencies
 /node_modules
 /.pnp
