Fix Google OAuth redirect_uri_mismatch error by updating callback URL

--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.40.0",
+    "@auth/mongodb-adapter": "^3.10.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "google-auth-library": "^10.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.18.0",
     "mongoose": "^8.0.0",
     "next": "15.4.6",
+    "next-auth": "^4.24.11",
     "nodemailer": "^6.9.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
