Fix dependency conflict: Downgrade @auth/core to 0.34.2 to match next-auth requirements

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "^0.40.0",
+    "@auth/core": "0.34.2",
     "@auth/mongodb-adapter": "^3.10.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
