--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "verify-oauth": "node scripts/verify-google-oauth.js"
   },
   "dependencies": {
     "@auth/core": "0.34.2",
     "@auth/mongodb-adapter": "^3.10.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "google-auth-library": "^10.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
