--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "env": {
     "MOCK_GOOGLE_AUTH": "false",
-    "GOOGLE_CALLBACK_URL": "https://your-vercel-domain.vercel.app/api/auth/google/callback"
+    "GOOGLE_CALLBACK_URL": "https://api-rgram1.vercel.app/api/auth/google/callback"
   },
   "build": {
     "env": {
       "MOCK_GOOGLE_AUTH": "false",
-      "GOOGLE_CALLBACK_URL": "https://your-vercel-domain.vercel.app/api/auth/google/callback"
+      "GOOGLE_CALLBACK_URL": "https://api-rgram1.vercel.app/api/auth/google/callback"
     }
   }
 }
