--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@auth/core": "0.34.2",
     "@auth/mongodb-adapter": "^3.10.0",
+    "@types/formidable": "^3.4.5",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "formidable": "^3.5.4",
     "google-auth-library": "^10.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
