Remove .env.local from tracking and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,10 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
+# env files
 .env*
-!.env.local
+# Allow example file to be committed
+!.env.example
 
 
 # vercel
