--- a/package.json
+++ b/package.json
@@ -1,43 +1,32 @@
 {
-  "name": "apirgram",
+  "name": "upload-api",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "start1": "next start -p 80 -H 0.0.0.0",
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "0.34.2",
-    "@auth/mongodb-adapter": "^3.10.0",
     "@types/formidable": "^3.4.5",
-    "bcryptjs": "^2.4.3",
+    "@types/node": "^24.3.0",
+    "@types/react": "^18.3.23",
+    "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
     "formidable": "^3.5.4",
-    "google-auth-library": "^10.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.18.0",
-    "mongoose": "^8.0.0",
-    "next": "15.4.6",
-    "next-auth": "^4.24.11",
-    "nodemailer": "^6.9.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "validator": "^13.11.0"
+    "next": "^13.5.11",
+    "nodemailer": "^7.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.9.2",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "24.2.0",
-    "@types/nodemailer": "^6.4.14",
-    "@types/react": "19.1.9",
-    "@types/validator": "^13.11.0",
-    "axios": "^1.11.0",
-    "typescript": "5.9.2"
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^7.0.0",
+    "@types/validator": "^13.15.2"
   }
 }
