--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "env": {
     "MOCK_GOOGLE_AUTH": "true",
     "GOOGLE_CALLBACK_URL": "https://api-rgram1.vercel.app/api/auth/google/callback"
@@ -8,5 +9,17 @@
       "MOCK_GOOGLE_AUTH": "true",
       "GOOGLE_CALLBACK_URL": "https://api-rgram1.vercel.app/api/auth/google/callback"
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-CSRF-Token"
+      },
+      "continue": true
+    }
+  ]
 }
