--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,27 @@
 {
   "version": 2,
+  "buildCommand": "next build",
+  "installCommand": "npm install",
+  "framework": "nextjs",
   "env": {
     "MOCK_GOOGLE_AUTH": "true",
     "GOOGLE_CALLBACK_URL": "https://api-rgram1.vercel.app/api/auth/google/callback"
   },
-  "build": {
-    "env": {
-      "MOCK_GOOGLE_AUTH": "true",
-      "GOOGLE_CALLBACK_URL": "https://api-rgram1.vercel.app/api/auth/google/callback"
-    }
-  },
-  "routes": [
+  "headers": [
     {
-      "src": "/api/(.*)",
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-CSRF-Token"
-      },
-      "continue": true
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,DELETE,PATCH,POST,PUT,OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" }
+      ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     }
   ]
 }
