--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "formidable": "^3.5.4",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.2",
     "next": "^13.5.11",
     "nodemailer": "^7.0.5",
     "react": "^18.3.1",
