feat: Add Story Media API with organized Cloudinary folders and auto-cleanup
- Add story upload, retrieve, and delete endpoints
- Organize media in users/{username}/story/{image|video} folders
- Implement automatic story cleanup after 24 hours
- Add manual and scheduled cleanup scripts
- Include comprehensive documentation and test files
- Update package.json with cleanup scripts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cleanup-stories": "node scripts/cleanup-expired-stories.js",
+    "cleanup-scheduled": "node scripts/scheduled-cleanup.js"
   },
   "dependencies": {
     "@types/formidable": "^3.4.5",
