--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/formidable": "^3.4.5",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "@types/react": "^18.3.23",
     "axios": "^1.11.0",
@@ -20,6 +21,7 @@
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
     "next": "^13.5.11",
     "nodemailer": "^7.0.5",
     "react": "^18.3.1",
