--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^7.0.0",
-    "@types/validator": "^13.15.2"
+    "@types/validator": "^13.15.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
