🚀 Ubuntu Server Deployment Configuration
- Fixed server.js to bind to 0.0.0.0:4000 for external access
- Updated package.json start script to use custom server
- Added Ubuntu firewall configuration script
- Created automated deployment script for 103.14.120.163
- Added comprehensive setup documentation
- Created quick deployment guide for production server

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
+    "start:next": "next start",
     "lint": "next lint",
     "cleanup-stories": "node scripts/cleanup-expired-stories.js",
     "cleanup-scheduled": "node scripts/scheduled-cleanup.js"
