--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sharp": "^0.34.3",
     "typescript": "^5.9.2",
     "validator": "^13.15.15"
   },
