chore: Update environment configuration and add status file

--- a/.env
+++ b/.env
@@ -4,13 +4,13 @@ EMAIL_USER=swayam.toss.cs@gmail.com
 EMAIL_PASS=ozncdubcwsunrkbz
 EMAIL_FROM=swayam.toss.cs@gmail.com
 PORT=5001
-CORS_ORIGIN=http://103.14.120.163:8081
+CORS_ORIGIN=http://localhost:3000
 YOUTUBE_API_KEY=AIzaSyDVsMDn82s-o7LwZyEJwL51HOUkDN3id8o
 
 # Google OAuth Configuration
 
-NODE_ENV=production
-NEXTAUTH_URL=http://103.14.120.163:8081
+NODE_ENV=development
+NEXTAUTH_URL=http://localhost:3001
 CLOUDINARY_CLOUD_NAME=dtuxhmf4t
 CLOUDINARY_API_KEY=459778535145914
 CLOUDINARY_API_SECRET=S3eVBFP3PoEr0dKpoaUaC1DcSCY
