fix: Resolve build issues and optimize production deployment
- Fix dynamic server usage errors in API routes
- Update MongoDB connection settings and remove deprecated options
- Fix UserAssets model import paths in all API routes
- Add production build scripts and MongoDB connection testing
- Optimize Next.js configuration for production builds
- Add comprehensive error handling and logging
- Create PowerShell and Bash build fix scripts
- Update package.json with new build commands

Build now completes successfully without errors.
All User Assets API endpoints are fully functional.
Server ready for production deployment.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "next dev -H 0.0.0.0 -p 3000",
     "build": "next build",
+    "build:prod": "node build-production.js",
     "start": "node server.js",
     "start:next": "next start",
     "lint": "next lint",
+    "test:mongodb": "node fix-mongodb-connection.js",
     "cleanup-stories": "node scripts/cleanup-expired-stories.js",
     "cleanup-scheduled": "node scripts/scheduled-cleanup.js"
   },
