feat: Add complete Baba Pages API system with posts, videos, and stories
- Add Baba model for spiritual leader profiles
- Add BabaPost model for posts with images
- Add BabaVideo model for videos with thumbnails
- Add BabaStory model for 24-hour stories
- Add complete CRUD APIs for all content types
- Add automatic story cleanup after 24 hours
- Add image optimization with Sharp
- Add file system organization in public/babaji-pages/
- Add comprehensive documentation and Postman collection
- Add test scripts for all functionality
- Fix baba deletion to allow recreation with same ID
- Add MongoDB connection fixes and cleanup scripts

--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "next build",
     "build:prod": "node build-production.js",
     "start": "node server.js",
+    "start:cleanup": "node start-with-cleanup.js",
     "start:next": "next start",
     "lint": "next lint",
     "test:mongodb": "node fix-mongodb-connection.js",
+    "test:mongodb:server": "node test-mongodb-connection-server.js",
+    "fix:mongodb": "node fix-mongodb-atlas-connection.js",
+    "test:baba": "node test-baba-pages-api.js",
+    "test:story-expiration": "node test-story-expiration.js",
     "cleanup-stories": "node scripts/cleanup-expired-stories.js",
     "cleanup-scheduled": "node scripts/scheduled-cleanup.js"
   },
