--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "next": "^13.5.11",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
