Update MongoDB connection to use swayam database and fix environment configuration

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:next": "next start",
     "lint": "next lint",
     "test:mongodb": "node fix-mongodb-connection.js",
+    "test:mongodb:app": "node test-mongodb-connection.js",
     "test:mongodb:server": "node test-mongodb-connection-server.js",
     "fix:mongodb": "node fix-mongodb-atlas-connection.js",
     "test:baba": "node test-baba-pages-api.js",
@@ -41,6 +42,7 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "form-data": "^4.0.4",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
