feat: Implement Baba Pages authorization and fix email URL issues
- Add authorization to Baba Pages (only creator can delete/upload posts/videos/stories)
- Fix forgot password email URLs to use server IP instead of localhost
- Optimize email sending configuration for faster delivery
- Fix Mongoose duplicate index warnings
- Update environment templates with correct server URLs
- Add comprehensive authorization checks across all Baba Pages endpoints

--- a/.env.local
+++ b/.env.local
@@ -9,7 +9,7 @@ SMTP_USER=swayam.toss.cs@gmail.com
 SMTP_PASS=yawq uwvk pode lmpc
 
 # Application Configuration
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=http://103.14.120.163:8081
 APP_NAME=RGram
 
 # Security Settings
@@ -20,7 +20,7 @@ NODE_ENV=development
 
 # Email Configuration for Forgot Password API
 EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=swayam.toss.cs@gmail.com
+EMAIL_PORT=465
+EMAIL_USER=shivamsah62046@gmail.com
 EMAIL_PASS=yawq uwvk pode lmpc
-EMAIL_FROM=swayam.toss.cs@gmail.com
+EMAIL_FROM=shivamsah62046@gmail.com
