--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "@types/react": "^18.3.23",
-    "axios": "^1.11.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
-    "dotenv": "^17.2.1",
+    "cookie": "^1.0.2",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "form-data": "^4.0.4",
     "formidable": "^3.5.4",
@@ -54,6 +55,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sharp": "^0.34.3",
+    "simple-peer": "^9.11.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "typescript": "^5.9.2",
     "uuid": "^9.0.1",
     "validator": "^13.15.15"
